--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ num_cpus = "1.17.0"
 prometheus = { version = "0.14.0", optional = true }
 serde = "1.0.219"
 socket2 = "0.5.10"
-solana-entry = "=2.3.1"
-solana-ledger = "=2.3.1"
-solana-sdk = "=2.3.1"
+solana-entry = "3.0.0"
+solana-ledger = {version="3.0.0", features=["agave-unstable-api"]}
+solana-sdk = "3.0.0"
 tokio = "1.46.1"
 tracing = "0.1.41"
